# C-OPENGL-Task

./: README.md
task1/: CMakeLists.txt  main.cpp
task1/CompressedData/: CMakeLists.txt  CompressedData.cpp
task1/CompressedData_Test/: CMakeLists.txt  CompressedData_Test.cpp
task2/: CMakeLists.txt  EndState.h  Machine.h  PrintTicketState.h  RefundMoneyState.h  State.h  choosingTicketState.h  main.cpp  takingMoneyState.h
task2/config/: tickets.ini
task3/: CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  TrianglesMoving.cpp  TrianglesMoving.h  main.cpp
task3/CollisionDetection_Test/: CMakeLists.txt  TriangleTest.cpp
task3/glfw-3.4/: CMakeLists.txt
